--- a/game-era-war-and-tactics/Cargo.toml
+++ b/game-era-war-and-tactics/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2021"
 
 [dependencies]
 core-domain = { path = "../core-game-era-war-and-tactics/core-domain/" }
-core-reources = { path = "../core-game-era-war-and-tactics/core-resources/" }
+core-resources = { path = "../core-game-era-war-and-tactics/core-resources/" }
